// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component default snapshot 1`] = `
<div>
  <button
    className="button dropdown"
    disabled={false}
    onClick={[Function]}
  >
    
  </button>
</div>
`;

exports[`Dropdown component snapshot with children 1`] = `
<div>
  <button
    className="button dropdown"
    disabled={false}
    onClick={[Function]}
  >
    
  </button>
</div>
`;

exports[`Dropdown component snapshot with className 1`] = `
<div>
  <button
    className="button dropdown className"
    disabled={false}
    onClick={[Function]}
  >
    
  </button>
</div>
`;

exports[`Dropdown component snapshot with disabled 1`] = `
<div>
  <button
    className="button dropdown disabled"
    disabled={true}
    onClick={[Function]}
  >
    
  </button>
</div>
`;

exports[`Dropdown component snapshot with disabledClassName 1`] = `
<div>
  <button
    className="button dropdown disabledClassName"
    disabled={true}
    onClick={[Function]}
  >
    
  </button>
</div>
`;

exports[`Dropdown component snapshot with label 1`] = `
<div>
  <button
    className="button dropdown"
    disabled={false}
    onClick={[Function]}
  >
    menu1
  </button>
</div>
`;
